--- a/Doctor-Portal/src/screens/Roompage.css
+++ b/Doctor-Portal/src/screens/Roompage.css
@@ -50,6 +50,7 @@ button:hover {
 
 .player-container {
   margin-left: 200px;
+  border: 5px solid black;
   justify-content: space-between;
   margin-top: 20px;
 }
