--- a/Doctor-Portal/src/screens/Roompage.css
+++ b/Doctor-Portal/src/screens/Roompage.css
@@ -50,9 +50,32 @@ button:hover {
 
 .player-container {
   margin-left: 200px;
-  border: 5px solid black;
+  background-color: rgb(32, 32, 32);
   justify-content: space-between;
   margin-top: 20px;
+}
+
+.str {
+  background-color: aqua;
+}
+
+.str svg{
+  color: white;
+  font-size: 25px;
+}
+
+.endbtn{
+  width: 70px;
+  height: 30px;
+  padding: 0px;
+  border-radius: 12px;
+  background-color: red;
+  text-align: center;
+}
+
+.endbtn svg{
+  color: white;
+  font-size: 30px;
 }
 
 .schcall {
