--- a/Patient-Portal/src/Home.css
+++ b/Patient-Portal/src/Home.css
@@ -1,9 +1,42 @@
-.home-content{
+.home-content {
+    position: fixed;
+    top: 90px;
+    margin-left: 230px;
+    margin-right: 20px;
+    background-color: transparent;
+    border-radius: 12px;
+    /* box-shadow: 2px 2px 10px #9bafaf; */
+    width: calc(100% - 250px);
+    height: calc(100vh - 120px);
     display: flex;
-    justify-content: space-evenly;
+    flex-direction: column; /* Ensure children stack vertically */
 }
 
+.top-content {
+    flex: 1; /* Take up remaining space equally */
+    display: flex;
+    /* background-color: antiquewhite; */
+    justify-content: space-evenly;
+    gap: 20px;
+    border-radius: 12px;
+    margin-bottom: 20px;
+}
 
+.top-left,
+.top-right {
+    flex: 1; /* Equal width for both sides */
+    background-color: #ffffff;
+    border-radius: 12px;
+    box-shadow: 2px 2px 10px #9bafaf;
+}
 
+.head {
+    padding-left: 20px;
+}
 
-
+.bottom-content {
+    flex: 1; /* Take up remaining space equally */
+    background-color: white;
+    border-radius: 12px;
+    box-shadow: 2px 2px 10px #9bafaf;
+}
