--- a/Patient-Portal/src/navbar.css
+++ b/Patient-Portal/src/navbar.css
@@ -14,7 +14,20 @@ body{
 }
 
 .logo-title{
+  display: flex;
+  align-items: center;
+}
+
+.title-logo{
     margin-left: 50px;
+    font-size: 24px;
+    text-decoration: none;
+    color: black;
+    font-weight: 700;
+}
+
+.title-logo:hover{
+  cursor: pointer;
 }
 
 .usr-logo{
