--- a/Doctor-Portal/src/screens/Patientstyle.css
+++ b/Doctor-Portal/src/screens/Patientstyle.css
@@ -13,10 +13,38 @@
   background-color: rgb(34, 34, 34);
 }
 
+.fnavbar {
+  margin-top: 0px;
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  justify-content: space-between;
+}
+
+.simcards {
+  display: flex;
+  flex-direction: row;
+  justify-content: left;
+  gap: 0px;
+}
+
+.battery {
+  display: flex;
+  flex-direction: row;
+  justify-content: right;
+  gap: 5px;
+}
+
+.PatientCnt form {
+  margin-top: 15px;
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
 .PatientCnt {
     width: 200px;
     margin: 5px;
-    padding: 20px;
+    padding: 0px 0px 20px 0px;
     border-top: 30px solid #000000;
     border-bottom: 25px solid #000000;
     border-left: 10px solid #000000;
