--- a/Patient-Portal/src/Home.css
+++ b/Patient-Portal/src/Home.css
@@ -28,15 +28,185 @@
     background-color: #ffffff;
     border-radius: 12px;
     box-shadow: 2px 2px 10px #9bafaf;
+    overflow-y: auto;
+    max-height: 290px;
+    padding: 10px 10px;
 }
+
+.top-left::-webkit-scrollbar,
+.top-right::-webkit-scrollbar {
+    width: 8px; 
+    background-color: transparent; 
+    scroll-margin-right: 30px;   
+}
+
+.top-left::-webkit-scrollbar-track,
+.top-right::-webkit-scrollbar-track  {
+    background: transparent; 
+}
+
+.top-left::-webkit-scrollbar-thumb,
+.top-right::-webkit-scrollbar-thumb {
+    background: #b9b9b9; 
+    border-radius: 5px; 
+}
+
+.top-left::-webkit-scrollbar-thumb:hover,
+.top-right::-webkit-scrollbar-thumb:hover {
+    background: #999; 
+}
+
 
 .head {
     padding-left: 20px;
+    margin-bottom: 40px;
 }
+
+.up-content-parent {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    padding-left: 20px;
+}
+
+.up-content-left {
+    display: flex;
+}
+
+.up-content{
+    background-color: #faeed1b1;
+    width: 95%;
+    border-radius: 12px;
+    padding: 5px 2px;
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 20px;
+}   
+
+.up-apt{
+    margin: 2px;
+    text-align: left;
+    padding-left: 10px;
+    display: inline;
+}
+
 
 .bottom-content {
     flex: 1; /* Take up remaining space equally */
     background-color: white;
     border-radius: 12px;
     box-shadow: 2px 2px 10px #9bafaf;
+    overflow-y: auto;
+    /* max-height: 290px; */
+    /* padding: 10px 10px; */
+}
+
+
+.bottom-content::-webkit-scrollbar {
+    width: 8px; 
+    background-color: transparent; 
+    scroll-margin-right: 30px;   
+}
+
+.bottom-content::-webkit-scrollbar-track{
+    background: transparent; 
+}
+
+.bottom-content::-webkit-scrollbar-thumb{
+    background: #b9b9b9; 
+    border-radius: 5px; 
+}
+
+.bottom-content::-webkit-scrollbar-thumb:hover{
+    background: #555; 
+}
+
+
+
+
+.bt-content{
+    background-color: #faeed1b1;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px;
+    margin: 20px;
+    border-radius: 12px;    
+}
+
+.doc-img {
+    width: 70px;
+    border-radius: 50%;
+}
+
+.doc-name{
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+
+.view-btn{
+    border: none;
+    border-radius: 12px;
+    background-color: #fff;
+    padding: 0px 20px;
+    height: 45px;
+    margin-right: 20px;
+    /* box-shadow: 0.5px 0.5px 0.5px #9bafaf; */
+    font-size: 14px;
+}
+
+.view-btn:hover{
+    cursor: pointer;
+    background-color: #f1f1f1;
+}
+
+
+
+.modal-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent overlay */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.modal {
+    width: 700px;
+    background-color: white;
+    padding: 20px;
+    border-radius: 12px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3); /* Add shadow effect */
+}
+
+.close-btn {
+    /* margin-top: 10px; */
+    border: none;
+    background-color: transparent;
+}
+
+.close-btn svg{
+    font-size: 25px;
+}
+
+.close-btn svg:hover{
+    cursor: pointer;
+}
+
+.modal-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.modal-body{
+    display: flex;
+}
+
+.model-info{
+    text-align: left;
 }
