--- a/Patient-Portal/src/book.css
+++ b/Patient-Portal/src/book.css
@@ -9,11 +9,35 @@
     margin-right: 20px; /* Added margin from the right end */
     box-shadow: 2px 2px 10px #9bafaf;
     overflow-y: auto; /* Add scrollbar if content overflows vertically */
-    /* display: flex; Use flexbox to arrange form elements vertically */
-    /* align-items: center; Center items vertically */
-    /* justify-content: center; Center items horizontally */
-    /* flex-direction: column; Stack form elements vertically */
+    
 }
+
+.head{
+    text-decoration: underline;
+}
+
+/* Style scrollbar */
+.book-content::-webkit-scrollbar {
+    width: 10px; /* Set the width of the scrollbar */
+}
+
+/* Track */
+.book-content::-webkit-scrollbar-track {
+    background: #f1f1f1; /* Set the background color of the track */
+}
+
+/* Handle */
+.book-content::-webkit-scrollbar-thumb {
+    background: #888; /* Set the color of the scrollbar handle */
+    border-radius: 5px; /* Set the border radius of the scrollbar handle */
+}
+
+/* Handle on hover */
+.book-content::-webkit-scrollbar-thumb:hover {
+    background: #555; /* Change color of scrollbar handle on hover */
+}
+
+
 
 .form{
     text-align: left;
@@ -74,18 +98,27 @@ input[type="date"]{
 .book-btn{
     /* position: absolute; */
     padding: 12px 30px;
-    margin: 30px;
+    margin: 30px 10px 30px 980px;
     border: none;
     border-radius: 50px;
     background-color: orange;
     color: black;
-    font-size: 14px;
-    position: fixed;
-    right: 50px;
-    /* bottom: 50px; */
-}       
+    font-size: 15px;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    transition: background-color 0.2s ease-in;
+}
+
+.book-btn svg{
+    transition: transform 0.2s ease-in;
+}
+
+.book-btn:hover svg{
+    transform: scale(1.4);
+}
 
 .book-btn:hover{
     cursor: pointer;
-    background-color: rgb(253, 186, 61);
+    background-color: rgb(255, 181, 42);
 }
