--- a/Patient-Portal/src/loginPage.css
+++ b/Patient-Portal/src/loginPage.css
@@ -1,85 +1,203 @@
-body{
-    background-color: white;
+*{
+    /* margin: 0; */
+    padding: 0;
+    box-sizing: border-box;
+    /* font-family: 'Montserrat', sans-serif; */
+}
+
+
+
+.login-box{
+    background-color: #fff;
+    border-radius: 30px;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.35);
+    position: relative;
+    overflow: hidden;
+    width: 768px;
+    max-width: 100%;
+    min-height: 480px;
 }
 
 .login-box{
-    width: 700px;
-    display: flex;
-    justify-content: space-evenly;
-    margin: 180px auto;
-    border-radius: 12px;
-    background-color: white;
-    box-shadow: 1px 5px 15px gray ;
+    font-size: 14px;
+    line-height: 20px;
+    letter-spacing: 0.3px;
+    margin: 100px auto;
 }
 
-.images{
-    width: 50%;
-    padding: 5px 5px 0px 5px;
+.login-box span{
+    font-size: 12px;
 }
 
-.sample-img{
-    width: 100%;
-    border-radius: 12px;
-}
-
-.content{
-    border: none;
-    width: 50%;
-}
-
-.log, .reg{
-    background-color: lightgray;
-    border: none;
-    padding: 12px 30px;
-    border-radius: 12px;
-    margin: 5px;
-}
-
-
-
-.log:hover, .reg:hover{
-    cursor: pointer;
-    background-color: rgb(148, 148, 148);
-}
-
-
-
-
-.input-log-text, .input-reg-text{
-    border-top: none;
-    border-left: none;
-    border-right: none;
-    border-bottom: 2px solid lightgray;
-    margin-top: 20px;
-    margin-bottom: 10px;
-    padding: 15px 70px 0px 5px;
-    /* display: flex; */
-    /* align-items: center; */
-}
-
-.input-text:focus {
-    outline: none; 
-    /* border-color: transparent; Set border color to transparent on focus */
-  }
-
-.login-btn, .reg-btn{
-    color: white;
-    background-color: black;
-    border: none;
-    padding: 12px 50px;
-    border-radius: 50px;
+.login-box a{
+    color: #333;
     font-size: 13px;
-    margin: 25px;
-    transition: 0.3s;
-}
-
-.login-btn:hover{
-    cursor: pointer;
-    background-color: rgb(190, 190, 190);
-    color: black;
-}
-
-.sign-up{
-    color: blue;
     text-decoration: none;
+    margin: 15px 0 10px;
+}
+
+.login-box button{
+    background-color: #9d86bc;
+    color: #fff;
+    font-size: 12px;
+    padding: 10px 45px;
+    border: 1px solid transparent;
+    border-radius: 8px;
+    font-weight: 600;
+    letter-spacing: 0.5px;
+    text-transform: uppercase;
+    margin-top: 10px;
+    cursor: pointer;
+}
+
+.login-box button.hidden{
+    background-color: transparent;
+    border-color: #fff;
+}
+
+.login-box form{
+    background-color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding: 0 40px;
+    height: 100%;
+}
+
+.login-box input{
+    background-color: #eee;
+    border: none;
+    margin: 8px 0;
+    padding: 10px 15px;
+    font-size: 13px;
+    border-radius: 8px;
+    width: 100%;
+    outline: none;
+}
+
+.form-container{
+    position: absolute;
+    top: 0;
+    height: 100%;
+    transition: all 0.6s ease-in-out;
+}
+
+.sign-in{
+    left: 0;
+    width: 50%;
+    z-index: 2;
+}
+
+
+.login-box.active .sign-in{
+    transform: translateX(100%);
+}
+
+.login-box.active .sign-up{
+    transform: translateX(100%);
+    opacity: 1;
+    z-index: 5;
+    animation: move 0.6s;
+}
+
+@keyframes move{
+    0%, 49.99%{
+        opacity: 0;
+        z-index: 1;
+    }
+    50%, 100%{
+        opacity: 1;
+        z-index: 5;
+    }
+}
+
+.social-icons{
+    margin: 10px 0;
+}
+
+.social-icons svg{
+    border: 1px solid #ccc;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 3px;
+    width: 38px;
+    height: 38px;
+    color: brown;
+    padding: 5px;
+    /* background-color: black; */
+}
+
+.social-icons svg:hover{
+    cursor: pointer;
+}
+
+.toggle-container{
+    position: absolute;
+    top: 0;
+    left: 50%;
+    width: 50%;
+    height: 100%;
+    overflow: hidden;
+    transition: all 0.6s ease-in-out;
+    border-radius: 150px 0 0 100px;
+    z-index: 1000;
+}
+
+
+.login-box.active .toggle-container{
+    transform: translateX(-100%);
+    border-radius: 0 150px 100px 0;
+}
+
+.toggle{
+    background-color: #9d86bc;
+    height: 100%;
+    /* background: linear-gradient(to right, #5c6bc0, #512da8); */
+    color: #fff;
+    position: relative;
+    left: -100%;
+    height: 100%;
+    width: 200%;
+    transform: translateX(0);
+    transition: all 0.6s ease-in-out;
+}
+
+.login-box.active .toggle{
+    transform: translateX(50%);
+}
+
+.toggle-panel{
+    position: absolute;
+    width: 50%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding: 0 30px;
+    text-align: center;
+    top: 0;
+    transform: translateX(0);
+    transition: all 0.6s ease-in-out;
+}
+
+
+.toggle-left{
+    transform: translateX(-200%);
+}
+
+.login-box.active .toggle-left{
+    transform: translateX(0);
+}
+
+.toggle-right{
+    right: 0;
+    transform: translateX(0);
+}
+
+.login-box.active .toggle-right{
+    transform: translateX(200%);
 }
