--- a/Patient-Portal/src/Home.css
+++ b/Patient-Portal/src/Home.css
@@ -19,7 +19,7 @@
     justify-content: space-evenly;
     gap: 20px;
     border-radius: 12px;
-    margin-bottom: 20px;
+    /* margin-bottom: 20px; */
 }
 
 .top-left,
@@ -29,8 +29,8 @@
     border-radius: 12px;
     box-shadow: 2px 2px 10px #9bafaf;
     overflow-y: auto;
-    max-height: 290px;
-    padding: 10px 10px;
+    max-height: 295px;
+    padding: 0px 10px;
 }
 
 .top-left::-webkit-scrollbar,
@@ -58,8 +58,12 @@
 
 
 .head {
-    padding-left: 20px;
-    margin-bottom: 40px;
+    padding : 25px 10px;
+    margin: 0px 0px 0px 0px;
+    position: sticky;
+    top: 0px;
+    background-color: #fff;
+    /* box-shadow: 1px 1px rgb(216, 209, 209); */
 }
 
 .up-content-parent {
@@ -130,7 +134,7 @@
     justify-content: space-between;
     align-items: center;
     padding: 10px;
-    margin: 20px;
+    margin: 0px 20px 20px 20px;
     border-radius: 12px;    
 }
 
@@ -207,6 +211,3 @@
     display: flex;
 }
 
-.model-info{
-    text-align: left;
-}
