--- a/Doctor-Portal/src/Home.css
+++ b/Doctor-Portal/src/Home.css
@@ -1,8 +1,21 @@
 
-
+.outer {
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+}
+.background-video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: -1; /* Ensure the video stays behind other content */
+}
 .container {
-  max-width: 800px;
-  margin: auto;
+  width: 80%;
+  margin: 150px 350px;
   padding: 20px;
 }
 
@@ -40,10 +53,11 @@
 }
 
 
-.appointments {
+.callhistory {
   display: flex;
-  top: 0;
   flex-direction: column;
+  justify-content: center;
+  margin-left: 65px;
   position: relative;
 }
 
@@ -55,7 +69,7 @@
   color: #000000;
   border-radius: 10px;
   padding: 10px;
-  width: 600px;
+  width: 90%;
   height: 120px;
   margin: 15px;
   transition: box-shadow 0.3s ease;
