--- a/Doctor-Portal/src/screens/IncomingStyle.css
+++ b/Doctor-Portal/src/screens/IncomingStyle.css
@@ -1,10 +1,22 @@
 /* IncomingStyle.css */
-
-.incomingCallContainer {
-  margin-top: 100px;
-  margin-left: 500px;
+.outer {
+  justify-content: center;
   width: 100%;
-  margin-right: 500px;
+  height: 100%;
+}
+.background-video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: -1; /* Ensure the video stays behind other content */
+}
+.incomingCallContainer {
+  width: 40%;
+  margin: 50px 450px;
+  padding: 20px;
 }
 
 .incomingCallCard {
