--- a/Doctor-Portal/src/screens/Patientstyle.css
+++ b/Doctor-Portal/src/screens/Patientstyle.css
@@ -1,8 +1,14 @@
 /* Patientscreen.css */
-
+.pouter {
+  background-image: url('./images1/photo-1582133456304-2f5cb1c2afbb.avif');
+  background-size: cover; /* Ensure the background image covers the entire element */
+  background-repeat: no-repeat; /* Prevent background image from repeating */
+  width: 100%;
+  height: 940px;
+}
 .featurephn {
-  margin-left: 600px;
-  margin-top: 100px;
+  margin-left: 620px;
+  margin-top: 115px;
   border: 5px solid black;
   border-top-left-radius: 35px;
   border-top-right-radius: 35px;
