--- a/Doctor-Portal/src/screens/Roompage.css
+++ b/Doctor-Portal/src/screens/Roompage.css
@@ -1,9 +1,12 @@
 /* RoomPage.css */
-
+.douter{
+  width: 100%;
+  height: 100%;
+}
 .RoomCnt {
   display: flex;
+  margin: 0px;
   max-width: 100%;
-  margin: 20px auto;
   padding: 20px;
   justify-content: space-evenly;
 }
