--- a/Doctor-Portal/src/Home.css
+++ b/Doctor-Portal/src/Home.css
@@ -23,9 +23,12 @@
 
 .calendar-container {
   width: 300px;
-  border: 1px solid #3f3f3f;
-  border-radius: 5px;
-  padding: 10px;
+  /* box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.1); */
+  border-radius: 20px;
+  border-bottom: 2px solid black;
+  /* border-top: 2px solid black; */
+  margin-top: 5px;
+  padding: 0px;
 }
 
 .calendar-header {
@@ -39,6 +42,7 @@
   background: none;
   border: none;
   cursor: pointer;
+  color: #000;
   font-size: 16px;
 }
 
@@ -62,34 +66,48 @@
   display: grid;
   grid-template-columns: repeat(7, 1fr);
   gap: 5px;
+  height: 200px;
 }
 
 .calendar-day {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 40px;
+  height: 30px;
   border-radius: 5px;
   cursor: pointer;
 }
 
 .calendar-day.empty {
-  background-color: #f2f2f2;
+  background-color: #ffffff;
 }
 
 .calendar-day.selected {
-  background-color: #007bff;
+  background-color: #0cb352;
   color: #fff;
 }
 
 
 .rightnav{
-  margin-left: 80%;
-  border: 2px solid black;
+  margin-left: 79.7%;
+  border: 2px solid rgb(137, 136, 136);
+  border-radius: 20px;
   display: flex;
   height: 670px;
+  background-color: #fff;
   flex-direction: column;
 }
+
+.chart-container {
+  margin-top: 5px;
+  width: 308px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 210px;
+}
+
+
 
 
 .container0 {
@@ -191,7 +209,8 @@
 .modal {
   position: absolute;
   border: 2px solid #000;
-  background-color: lightgray;
+  border-radius: 20px;
+  background-color: rgb(255, 255, 255);
   box-shadow: 2px solid black;
   width: 600px;
   margin: auto;
@@ -201,7 +220,7 @@
 
 .close-button {
   margin-left: 530px;
-  background-color: lightgray;
+  background-color: rgb(255, 255, 255);
   color: red;
   border: none; /* Remove default button border */
   cursor: pointer; /* Change cursor to pointer on hover */
@@ -276,6 +295,7 @@
   margin-right: 5px;
   background-color: #fff;
   border-radius: 5px;
+  border: 2px solid #4c4c4c;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
 }
 
