--- a/Patient-Portal/src/navbar.css
+++ b/Patient-Portal/src/navbar.css
@@ -65,33 +65,26 @@ body{
   transform: scale(1.4); /* Zooms in the icon */
 }
 
-.dropdown-content {
-    font-size: 16px;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    padding: 12px 16px;
-    z-index: 1;
-    top: 75px;
-    right: 30px;
-    display: none;
-    flex-direction: column; /* Align items vertically */
-    border-radius: 12px;
-  }
-  
-  .dropdown-content a {
-    color: black;
-    padding: 6px 0;
-    text-decoration: none;
-    display: block;
-  }
-  
-  .dropdown-content a:hover {
-    background-color: #f1f1f1;
-  }
-  
-  .usr-logo:hover .dropdown-content {
-    display: block;
-  }
-  
+.dropdown-menu {
+  padding: 10px;
+  width: 100px;
+  position: absolute;
+  top: 60px; 
+  right: 30px; 
+  background-color: #f9f9f9;
+  border-radius: 12px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+  display: flex;
+  flex-direction: column; 
+}
+
+.dropdown-item {
+  text-decoration: none;
+  color: black;
+  padding: 5px 12px;
+}
+
+.dropdown-item:hover {
+  background-color: #f1f1f1;
+}
