--- a/Doctor-Portal/src/Home.css
+++ b/Doctor-Portal/src/Home.css
@@ -25,7 +25,7 @@
   width: 300px;
   /* box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.1); */
   border-radius: 20px;
-  border-bottom: 2px solid black;
+  border-bottom: 2px solid rgb(188, 188, 188);
   /* border-top: 2px solid black; */
   margin-top: 5px;
   padding: 0px;
@@ -35,7 +35,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-bottom: 10px;
+  margin-bottom: 5px;
 }
 
 .calendar-header button {
@@ -73,7 +73,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 30px;
+  height: 25px;
   border-radius: 5px;
   cursor: pointer;
 }
@@ -325,6 +325,41 @@
 .modal-call-time {
   color: #888;
 }
+
+.incomingCallContainer1 {
+  width: 100%;
+  margin: 10px 1px;
+  padding: 5px;
+}
+.incomingcallh4{
+  margin-left: 80px;
+}
+
+.incomingCallCard1 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  padding: 10px;
+  height: 80px;
+  width: 287px;
+  margin-left: 4px;
+  background-color: #f9f9f9;
+}
+
+
+.patientIdLabel1 {
+  margin-top: 2px;
+  font-size: 20px;
+}
+
+/* .patientId1 {
+  margin-top: 2px;
+  font-size: 12px;
+  color: rgb(0, 0, 0); 
+} */
 
 
 
