design the chatbot page

--- a/Hospital/hospital/src/components/ChatBot/ChatBox.css
+++ b/Hospital/hospital/src/components/ChatBot/ChatBox.css
@@ -84,7 +84,7 @@
   .wrapper .content .bottom .btm .btn{
     margin-left: 10px;
   }
-  .wrapper .content .bottom .btm .btn button{
+  /* .wrapper .content .bottom .btm .btn button{
     width: 100px;
     height: 50px;
     border: none;
@@ -98,4 +98,4 @@
   }
   .wrapper .content .bottom .btm .btn button i{
     margin-left: 5px;
-  }
+  } */
