--- a/Doctor-Portal/src/screens/Proomstyle.css
+++ b/Doctor-Portal/src/screens/Proomstyle.css
@@ -76,7 +76,8 @@
     }
     
     .rPatientCnt button:hover {
-      background-color: #0056b3;
+      background-color: #000000;
+      color: #fff;
     }
   
     .callstatus {
