--- a/Doctor-Portal/src/Appointmentstyle.css
+++ b/Doctor-Portal/src/Appointmentstyle.css
@@ -1,4 +1,11 @@
-
+.outer1 {
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  background: #76b852;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #8DC26F, #76b852);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to left, #365523, #f1f3f1);
+}
 
 .container {
   max-width: 800px;
