--- a/Doctor-Portal/src/screens/Roompage.css
+++ b/Doctor-Portal/src/screens/Roompage.css
@@ -1,7 +1,11 @@
 /* RoomPage.css */
 .douter{
+  justify-content: center;
   width: 100%;
-  height: 100%;
+  height: 700px;
+  background: #ffffff;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #8DC26F, #76b852);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to left, #365523, #f1f3f1);
 }
 .RoomCnt {
   display: flex;
