--- a/Doctor-Portal/src/screens/Roompage.css
+++ b/Doctor-Portal/src/screens/Roompage.css
@@ -11,8 +11,8 @@ background: linear-gradient(to left, #365523, #f1f3f1);
   display: flex;
   margin: 0px;
   max-width: 100%;
+  flex-direction: row;
   padding: 20px;
-  justify-content: space-evenly;
 }
 
 h1 {
@@ -40,25 +40,25 @@ button:hover {
 } */
 
 .Input {
-  width: 100%;
-  margin-left: 200px;
+  width: 25%;
+  margin-left: 50px;
   margin-top:7px;
   box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.1);
   border-radius: 5px;
-  padding: 30px;
+  padding: 20px;
   background-color: #f6f5f3;
 
 }
 
 .Input form input{
-  width:500px;
+  width:250px;
 }
 
 
 .player-container {
-  margin-left: 300px;
+  margin-left: 270px;
   background-color: rgb(32, 32, 32);
-  width:600px;
+  width:20%;
   border: 5px solid #51504e;
   border-radius: 20px;
   height: 600px;
@@ -134,14 +134,94 @@ button:hover {
 .schcall {
   margin-top: 30px;
   display: flex;
-  justify-content: space-evenly;
+  flex-direction: column;
 }
-.schcall input {
+
+
+/* .schcall input {
   margin: 3px;
   width: 177px;
   border: 1px solid black;
   border-radius: 2px;
+} */
+
+.inputforms {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
-.schcall button {
-  margin: 5px;
+
+.inputforms input{
+  width: 150px;
+  border: 1px solid black;
+  height: 30px;
+  border-radius: 10px;
+}
+.buttonsform{
+  margin-top: 20px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.buttonsform button{
+  width: 150px;
+  border-radius: 10px;
+}
+
+
+
+.fetchcalls{
+  margin-left: 2%;
+  width: 500px;
+  display: flex;
+  flex-direction: column;
+  margin-top: 8px;
+  max-height: 600px; /* Set a maximum height to enable scrolling */
+  overflow-y: auto;
+  border: 2px solid black;
+  background-color: white;
+  border-radius: 20px;
+  
+}
+
+.fetchcalls::-webkit-scrollbar {
+  width: 10px; /* Width of the scrollbar */
+}
+
+/* Track styles */
+.fetchcalls::-webkit-scrollbar-track {
+  border-radius: 10px;
+  background: #f1f1f1; /* Color of the scrollbar track */
+}
+
+/* Thumb styles */
+.fetchcalls::-webkit-scrollbar-thumb {
+  background: #888; /* Color of the scrollbar thumb */
+  border-radius: 5px; /* Border radius of the scrollbar thumb */
+}
+
+/* Handle on hover */
+.fetchcalls::-webkit-scrollbar-thumb:hover {
+  background: #555; /* Color of the scrollbar thumb on hover */
+}
+.card1 {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  background-color: #f9f9f9;
+  color: #000000;
+  border-radius: 10px;
+  padding: 10px;
+  width:90%;
+  height: 120px;
+  margin: 15px;
+  transition: box-shadow 0.3s ease;
+}
+
+.card1:hover {
+  box-shadow: 0px 0px 10px rgb(0, 0, 0); /* Add box shadow on hover */
+}
+
+.left1 {
+  flex: 1;
 }
