Integrated the doctor page with backend and search filter logic also in admin portal

--- a/Admin-Portal/src/components/DoctorDetails/DoctorDetails.scss
+++ b/Admin-Portal/src/components/DoctorDetails/DoctorDetails.scss
@@ -11,8 +11,9 @@
       margin-bottom: 20px;
   
       input[type='text'] {
-        width: calc(100% - 120px);
+        width: calc(50% - 120px);
         padding: 10px;
+        margin-left: 10px;
         border: 1px solid #ccc;
         border-radius: 5px;
         font-size: 16px;
@@ -25,7 +26,8 @@
       }
   
       .add-doctor-btn {
-        width: 150px;
+        width: 100px;
+       
         padding: 10px;
         border: none;
         border-radius: 5px;
