--- a/Admin-Portal/src/components/ViewDoctorHistory/ViewDoctorHistory.scss
+++ b/Admin-Portal/src/components/ViewDoctorHistory/ViewDoctorHistory.scss
@@ -38,7 +38,7 @@
       flex-wrap: wrap;
       gap: 20px;
   
-      .patient-card {
+      .call-record {
         width: calc(33.33% - 20px);
         padding: 20px;
         border: 1px solid #ccc;
