--- a/Patient-Portal/src/App.css
+++ b/Patient-Portal/src/App.css
@@ -14,7 +14,6 @@
 }
 
 .App-header {
-  background-color: #282c34;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -24,8 +23,13 @@
   color: white;
 }
 
+body{
+  background-color: var(--body_background);
+  /* color: var(--body_color); */
+}
+
 .App-link {
-  color: #61dafb;
+  color: var(--link_color);
 }
 
 @keyframes App-logo-spin {
