--- a/Patient-Portal/src/components/book/book.css
+++ b/Patient-Portal/src/components/book/book.css
@@ -1,20 +1,17 @@
 .book-content {
     position: fixed;
-    background-color: white;
+    background-color: var(--div_background);
     border-radius: 12px;
     width: calc(100% - 250px); /* Adjusted width */
     height: calc(100vh - 120px);
     top: 90px;
     margin-left: 230px; /* Adjusted to accommodate the sidebar width */
     margin-right: 20px; /* Added margin from the right end */
-    box-shadow: 2px 2px 10px #9bafaf;
+    box-shadow: 2px 2px 10px var(--div_shadow);
     overflow-y: auto; /* Add scrollbar if content overflows vertically */
-    
+    color: var(--body_color);
 }
 
-.head{
-    text-decoration: underline;
-}
 
 /* Style scrollbar */
 .book-content::-webkit-scrollbar {
@@ -66,19 +63,27 @@
 
 
 input[type="text"],textarea{
+    color: var(--body_color);
     padding: 10px;
     margin-left: 60px;
     width: 70%;
     border: 1px solid lightgray;
     border-radius: 12px;
     font-family: Arial, Helvetica, sans-serif; 
+    background-color: var(--tile_color);
 }
 
 input[type="date"], select{
     /* padding: 10px; */
+    color: var(--body_color);
+    background-color: var(--tile_color);
     border: 1px solid lightgray;
     border-radius: 12px;
     font-family: Arial, Helvetica, sans-serif;
+}
+
+input::placeholder, textarea::placeholder{
+    color: var(--place_color);
 }
 
 /* input[type="date"]{
@@ -126,3 +131,37 @@ input[type="date"]{
     cursor: pointer;
     background-color: rgb(255, 181, 42);
 }
+
+
+.popup-message {
+    position: absolute;
+    top: 50px;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #62b127;
+    border: 1px solid #ced4da;
+    box-shadow: 0 0px 10px rgba(0, 0, 0, 0.317);
+    padding: 20px;
+    border-radius: 30px;
+    z-index: 9999;
+    color: white;
+    /* transition: translate 10s ease-out; */
+}
+
+.popup-message p {
+    margin: 0;
+    /* opacity: 1; */
+}
+
+/* .popup-message .close {
+    position: absolute;
+    top: 5px;
+    right: 10px;
+    cursor: pointer;
+    font-size: 18px;
+    color: #6c757d;
+}
+
+.popup-message .close:hover {
+    color: #343a40;
+} */
