--- a/Patient-Portal/src/components/profile/profile.css
+++ b/Patient-Portal/src/components/profile/profile.css
@@ -1,13 +1,14 @@
 .profile-content{
     position: fixed;
-    background-color: white;
+    background-color: var(--div_background);
     border-radius: 12px;
     width: calc(100% - 250px);
     height: calc(100vh - 120px);
     top: 90px;
     margin-left: 230px;
     margin-right: 20px;
-    box-shadow: 2px 2px 10px #9bafaf;
+    box-shadow: 2px 2px 10px var(--div_shadow);
     overflow-y: auto;
+    color: var(--body_color);
 }
 
