--- a/Patient-Portal/src/components/sidebar/sidebar.css
+++ b/Patient-Portal/src/components/sidebar/sidebar.css
@@ -1,12 +1,12 @@
 .side-content {
     position: fixed;
-    background-color: white;
+    background-color: var(--nav_background);
     border-radius: 12px;
     width: 200px;
     height: calc(100vh - 120px);
     top: 90px;
     margin: 0px 10px;
-    box-shadow: 2px 2px 10px #9bafaf;
+    box-shadow: 2px 2px 10px var(--div_shadow);
     display: flex;
     flex-direction: column;
 }
@@ -16,10 +16,11 @@
 }
 
 .btn {
+    color: var(--body_color);
     display: flex;
     align-items: center;
     gap: 10px;
-    background-color: white ;
+    background-color: var(--nav_background) ;
     font-size: 16px;
     border: none;
     border-radius: 12px;
@@ -28,11 +29,12 @@
     padding-bottom: 12px;
     padding-left: 15px;
     transition: background-color 0.3s ease-in;
+    text-decoration: none;
 }
 
 .btn:hover{
     cursor: pointer;
-    background-color: #EFEFEFEF;
+    background-color: var(--btn_hover);
 }
 .btn svg {
     transition: transform 0.3s ease; /* Added transition effect for icon zoom */
